# gmail-lab-extraction-skill

./: .gitignore  AGENTS.md  CONTRIBUTING.md  HANDOFF.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  START_HERE_FOR_AGENTS.md  SUPPORT.md  install.sh  pyproject.toml
.claude/skills/gmail-lab-export/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: idea.yml  question.yml  show_and_tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  help_request.yml  provider_request.yml  success_case.yml
docs/: acquisition_auth_router.md  agent_first_roadmap.md  agent_install.md  agent_patterns.md  api_first_architecture.md  api_first_beta_plan.md  architecture.md  community_intake.md  completeness_framework.md  goals_review.md  google_api_setup.md  learning_loop.md  onboarder_operational_flow.md  release_checklist.md  release_verdict.md  secret_resolution.md  self_hosted_product.md  test_strategy.md
examples/: portal_targets.tsv  regression_targets.tsv  targets.tsv
gmail_lab/: __init__.py  __main__.py
gmail_lab/core/: config.py  google_auth.py  layout.py  models.py
gmail_lab/core/claims/: derive.py  models.py  ownership.py  sample_date.py
gmail_lab/core/manifests/: analyses.py  claims.py  discovery.py  evidence.py  regression_summary.py
gmail_lab/core/runs/: __init__.py  explain.py
gmail_lab/core/secrets/: __init__.py  models.py  resolver.py  store.py
gmail_lab/core/store/: evidence.py  messages.py  state.py
gmail_lab/transports/: cli.py
providers/: invitro_anon_result_from_link.mjs
schemas/: analysis_manifest.schema.json  asset_manifest.schema.json  claims_manifest.schema.json  discovery_manifest.schema.json  evidence_manifest.schema.json  ocr_manifest.schema.json  pdf_text_manifest.schema.json  run_manifest_gmail.schema.json  run_manifest_portal.schema.json
scripts/: audit_health_validation.py  build_health_validation_corpus.py  derive_asset_metadata.py  doctor.sh  env.sh  extract_pdf_text.py  gmail_collect_portal_links.mjs  rerun_enrichment.py  run_gmail_api_export.py  run_gmail_discovery.sh  run_gmail_lab_export.sh  run_onboarder_email_sync.sh  run_portal_lab_export.sh  run_regression_suite.sh  summarize_regression_run.py  sync_run_to_cds.py
skills/gmail-browser-attachments/: SKILL.md
skills/gmail-browser-attachments/agents/: openai.yaml
skills/gmail-browser-attachments/scripts/: chrome_cdp_close_target.mjs  chrome_cdp_create_target.mjs  (+13 more)
skills/gmail-lab-export/: SKILL.md
tests/integration/: test_record_and_manifests.py
tests/unit/: test_claims_logic.py  test_derive_asset_metadata.py  test_extract_pdf_text_secrets.py  test_gmail_api_export.py  test_google_auth_setup.py  test_layout_and_state.py  test_regression_summary.py  test_rerun_enrichment_layout.py  test_secret_resolver.py
(+5 files in other folders)
